# Stier-sass-multiagent-2026

./: .mcp.json  .pre-commit-config.yaml  COMPLIANCE_REPORT.md  CONTRIBUTING.md  README.md
.serena/: project.yml
orchestrator/: .env.example  .gitignore  Dockerfile  Makefile  README.md  __init__.py  __main__.py  alembic.ini  chat.py  delegate.py  docker-compose.dev.yml  docker-compose.yml  mcp_server.py  prompt_builder.py  pyproject.toml  requirements.txt  run_mcp_server.sh
orchestrator/agents/: __init__.py  base.py  orchestrator.py  specialists.py  tasks.py
orchestrator/alembic/: env.py
orchestrator/api/: __init__.py  main.py
orchestrator/cli/: __init__.py  main.py
orchestrator/compliance/: __init__.py  allstate_checker.py
orchestrator/core/: __init__.py  auth.py  cache.py  celery_app.py  channels.py  checkpoint.py  config.py  context_manager.py  cost_predictor.py  database.py  design_quality.py  dlq.py  escalation.py  logging.py  models.py  observability.py  project_analyzer.py  project_modes.py  ralph_wiggum.py  rate_limit.py  semantic_validator.py  supervision.py  task_dsl.py  webhooks.py  workflow_modifier.py
orchestrator/scripts/: demo.py
orchestrator/tests/: __init__.py  conftest.py  test_api.py  test_auth.py  test_code_analysis.py  test_execution_tools.py  test_filesystem_tools.py  test_git_tools.py  test_ralph_wiggum.py  test_rate_limit.py  test_task_dsl.py  test_tools.py
orchestrator/tools/: __init__.py  code_analysis.py  execution.py  executor.py  filesystem.py  git_tools.py  registry.py
orchestrator/workers/: __init__.py  entrypoint.py
(+78 files in other folders)
